[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/AnimationPlayer.gd" type="Script" id=1]
[ext_resource path="res://Fake.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
tracks/0/type = "value"
tracks/0/path = NodePath("TileSwapper/FakeSel:way")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TileSwapper/FakeAdj:way")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="TileSwapper" type="AnimationPlayer"]
playback_speed = 2.0
anims/MoveFakes = SubResource( 1 )
script = ExtResource( 1 )

[node name="FakeSel" parent="." instance=ExtResource( 3 )]

[node name="FakeAdj" parent="." instance=ExtResource( 3 )]
position = Vector2( 64, 0 )
[connection signal="animation_finished" from="." to="." method="_on_AnimationPlayer_animation_finished"]
